syntax = "proto3";

import "google/protobuf/empty.proto";

package colabshield;

option go_package = "github.com/iliyankg/colab-shield/protos";

enum Status {
    OK = 0;
    ERROR = 1;
}

service ColabShield {
    rpc HealthCheck(google.protobuf.Empty) returns (HealthCheckResponse) {}
    rpc InitProject(InitProjectRequest) returns (InitProjectResponse) {}
    rpc ListProjects(google.protobuf.Empty) returns (ListProjectsResponse) {}
    rpc ListFiles(ListFilesRequest) returns (ListFilesResponse) {}
    rpc Lock(LockRequest) returns (LockResponse) {}    
}

message HealthCheckResponse {
    Status status = 1;
}

message InitProjectRequest {
    string projectId = 1;
}

message InitProjectResponse {
    Status status = 1;
}

message ListProjectsResponse {
    repeated string projects = 1;
}

message ListFilesRequest {
    string projectId = 1;
}

message FileInfo {
    string fileId = 1;
    string fileHash = 2;
    string userId = 3;
    string branchName = 4;    
}

message ListFilesResponse {
    repeated FileInfo files = 1;
}

message LockRequest {
    string projectId = 1;
    string userId = 2;
    string branchName = 3; 
    map<string, string> files = 4;
}

message LockResponse {
    Status status = 1;
}